# cryptography

./: .gitignore  Cargo.toml  README.md  proof.json  rand_cdd_claim.json  rand_scope_claim.json
cli/: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  other_cargo.toml
cli/.circleci/: config.yml
cli/agui/: README.md
cli/agui/common/: Cargo.toml
cli/agui/scp/: Cargo.toml
cli/agui/scv/: Cargo.toml
cli/cil/: README.md
cli/cil/common/: Cargo.toml
cli/cil/scp/: Cargo.toml
cli/cil/scv/: Cargo.toml
cli/cli/scp/: Cargo.toml
cli/cli/scv/: Cargo.toml
cli/common/: Cargo.toml
cli/common/src/: lib.rs
cli/cryptography/: Cargo.toml
cli/cryptography/benches/: elgamal_decryption.rs  membership_verification.rs
cli/cryptography/src/: errors.rs  lib.rs
cli/mercat/: README.md
cli/mercat/account/: .gitignore  Cargo.toml  arash.json
cli/mercat/chain_setup/: Cargo.toml
cli/mercat/common/: .gitignore  Cargo.toml  README.md
cli/mercat/global/: .gitignore  Cargo.toml
cli/mercat/interactive/: Cargo.toml
cli/mercat/mediator/: Cargo.toml
cli/mercat/test_runner/: Cargo.toml
cli/mercat/validator/: Cargo.toml
cli/scp/: Cargo.toml
cli/scp/src/: main.rs
cli/scripts/: lint
cli/scv/: Cargo.toml
cli/scv/src/: main.rs
cli/src/: lib.rs
cli/src/claim_proofs/: mod.rs
cli/src/examples/: simple.rs  simple_claim_verifier.rs
cli/src/pedersen_commitments/: mod.rs
confidential-identity/: Cargo.toml
confidential-identity-core/: Cargo.toml
confidential-identity-core/benches/: elgamal_decryption.rs  membership_verification.rs
confidential-identity-core/src/: lib.rs
confidential-identity-core/src/asset_proofs/: ciphertext_refreshment_proof.rs  const_time_elgamal_encryption.rs  correctness_proof.rs  discrete_log.rs  elgamal_encryption.rs  encrypting_same_value_proof.rs  encryption_proofs.rs  errors.rs  membership_proof.rs  mod.rs  one_out_of_many_proof.rs  range_proof.rs  wellformedness_proof.rs
confidential-identity-core/src/cdd_claim/: pedersen_commitments.rs
confidential-identity-core/src/codec_wrapper/: mod.rs
confidential-identity-v1/: Cargo.toml  README.md
confidential-identity-v1/benches/: scalar_from_hash.rs
confidential-identity-v1/cli/: README.md
confidential-identity-v1/cli/common/: Cargo.toml
confidential-identity-v1/cli/scp/: Cargo.toml
confidential-identity-v1/cli/scv/: Cargo.toml
confidential-identity-v1/ffi/: Cargo.toml  cbindgen.toml
confidential-identity-v1/ffi/examples/: c_example.h
confidential-identity-v1/ffi/src/: lib.rs
confidential-identity-v1/src/: claim_proofs.rs  lib.rs  mocked.rs  pedersen_commitments.rs  uuid.rs
confidential-identity-v1/wasm/: Cargo.toml
confidential-identity-v1/wasm/src/: lib.rs
confidential-identity-v2/: Cargo.toml  README.md
confidential-identity-v2/cli/: README.md
confidential-identity-v2/cli/common/: Cargo.toml
confidential-identity-v2/cli/scp/: Cargo.toml
confidential-identity-v2/cli/scv/: Cargo.toml
confidential-identity-v2/ffi/: Cargo.toml  cbindgen.toml
confidential-identity-v2/ffi/src/: lib.rs
confidential-identity-v2/src/: cdd_claim.rs  claim_proofs.rs  errors.rs  lib.rs  mocked.rs  scope_claim.rs  sign.rs
confidential-identity-v2/wasm/: Cargo.toml  README.md
confidential-identity-v2/wasm/examples/: package-lock.json  package.json
confidential-identity-v2/wasm/src/: lib.rs
confidential-identity/cli/: README.md
confidential-identity/cli/common/: Cargo.toml
confidential-identity/cli/scp/: Cargo.toml
confidential-identity/cli/scv/: Cargo.toml
confidential-identity/ffi/: Cargo.toml  Makefile  README.md  cbindgen.toml  confidential_identity.h
confidential-identity/ffi/examples/: c_example.c  c_example.h
confidential-identity/ffi/src/: lib.rs
confidential-identity/src/: claim_proofs.rs  errors.rs  lib.rs  mocked.rs  pedersen_commitments.rs  sign.rs
confidential-identity/wasm/: Cargo.toml  README.md  TODO
confidential-identity/wasm/examples/: index.test.js  package-lock.json
confidential-identity/wasm/src/: lib.rs
cryptography/: Cargo.toml  build.rs
cryptography-core/: Cargo.toml  README.md
cryptography-core/benches/: elgamal_decryption.rs  membership_verification.rs
cryptography-core/src/: errors.rs  lib.rs
cryptography-core/src/asset_proofs/: ciphertext_refreshment_proof.rs  const_time_elgamal_encryption.rs  correctness_proof.rs  elgamal_encryption.rs  encrypting_same_value_proof.rs  encryption_proofs.rs  macros.rs  membership_proof.rs  mod.rs  one_out_of_many_proof.rs  range_proof.rs  transcript.rs  wellformedness_proof.rs
cryptography-core/src/cdd_claim/: cdd_claim_data.rs  mod.rs  pedersen_commitments.rs
cryptography-core/src/codec_wrapper/: mod.rs
cryptography-core/src/dalek_wrapper/: mod.rs
cryptography/benches/: elgamal_decryption.rs  membership_verification.rs  mercat_account.rs  mercat_asset.rs  mercat_operations.rs  mercat_transaction.rs  scalar_from_hash.rs  utility.rs
cryptography/src/: errors.rs  lib.rs
cryptography/src/asset_proofs/: ciphertext_refreshment_proof.rs  correctness_proof.rs  elgamal_encryption.rs  encrypting_same_value_proof.rs  encryption_proofs.rs  errors.rs  macros.rs  membership_proof.rs  mod.rs  one_out_of_many_proof.rs  proofs.rs  range_proof.rs  transcript.rs  wellformedness_proof.rs
cryptography/src/claim_proofs/: claim_proofs.rs  mocked.rs  mod.rs  pedersen_commitments.rs
cryptography/src/mercat/: lib.rs  (+7 more)
mercat/: Cargo.toml  README.md
mercat/benches/: mercat_account.rs  mercat_asset.rs  mercat_transaction.rs  utility.rs
mercat/cli/: README.md
mercat/src/: account.rs  asset.rs  lib.rs  transaction.rs
mercat/wasm/: Cargo.toml  README.md
polymesh_crypto/: Cargo.toml  build.rs
private-identity-audit/: Cargo.toml  README.md
private-identity-audit/benches/: proof_gen.rs
private-identity-audit/ffi/: Cargo.toml  Makefile  README.md  cbindgen.toml  example.out
private-identity-audit/src/: errors.rs  lib.rs  macros.rs  proofs.rs  prover.rs  verifier.rs
private-identity-audit/wasm/: Cargo.toml  README.md
wasm_builder/: Cargo.toml
wasm_builder/src/: lib.rs
(+197 files in other folders)
