[workspace]

members = [
	"cryptography-core",
	"mercat",
	"mercat/cli/account",
	"mercat/cli/chain_setup",
	"mercat/cli/common",
	"mercat/cli/mediator",
	"mercat/cli/validator",
	"mercat/cli/interactive",
	"mercat/wasm",
	"confidential-identity",
	"confidential-identity/ffi",
	"confidential-identity/cli/scp",
	"confidential-identity/cli/scv",
	"confidential-identity/wasm",
]

[patch.crates-io]
blake2 = { git = "https://github.com/PolymathNetwork/hashes", branch = "master" }
schnorrkel = { git = "https://github.com/PolymathNetwork/schnorrkel", branch = "rebase-head" }
sp-io = { git = "https://github.com/PolymathNetwork/substrate", branch = "polymesh-develop" }
sp-std = { git = "https://github.com/PolymathNetwork/substrate", branch = "polymesh-develop" }
