[patch.crates-io]
bulletproofs = { version = "4.0.0", git = "https://github.com/PolymeshAssociation/bulletproofs", branch = "polymesh" }

[workspace]

members = [
	"mercat",
	"mercat/cli/account",
	"mercat/cli/common",
	"mercat/cli/mediator",
	"mercat/cli/validator",
	"mercat/cli/interactive",
	"mercat/wasm",
	"confidential-identity-core",
	"confidential-identity-v1",
	"confidential-identity-v1/ffi",
	"confidential-identity-v1/cli/scp",
	"confidential-identity-v1/cli/scv",
	"confidential-identity-v1/wasm",
	"confidential-identity-v2",
	"confidential-identity-v2/ffi",
	"confidential-identity-v2/cli/scp",
	"confidential-identity-v2/cli/scv",
	"confidential-identity-v2/wasm",
]
