[package]
name = "confidential_identity_core"
version = "1.0.0"
authors = [ "Polymesh Association" ]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/PolymeshAssociation/cryptography"
description = "The Repository for core cryptographic libraries used in Polymesh"
edition = "2018"
exclude = [".gitignore"]

[dependencies]
# Substrate
sp-std = { version = "4.0.0", default-features = false, git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-monthly-2022-05" }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }

# Common
serde = { version = "1.0.105", default-features = false, features = ["derive"], optional = true }
serde_bytes = { version = "0.11", default-features = false, features = ["alloc"], optional = true }
zeroize = { version = "1.1", default-features = false }
byteorder = { version = "^1.2.3", default-features = false, features = ["i128"] }
criterion = { version = "0.3", optional = true }

# Crypto
sha3 = { version = "0.9", default-features = false }
blake2 = { version = "0.10.2", default-features = false }
scale-info = { version = "2.0", default-features = false, features = ["derive"] }

rand_core = { version = "0.6", default-features = false}
rand = { version = "0.8", default-features = false }
getrandom = { version = "0.2.6", default-features = false, optional = true}

curve25519-dalek = { package = "curve25519-dalek-ng", version = "4", default-features = false, features = ["nightly", "alloc"] }
bulletproofs = { version = "4.0.0", default-features = false, git = "https://github.com/PolymeshAssociation/bulletproofs", branch = "polymesh" }

merlin = { version = "3.0.0", default-features = false }

[dev-dependencies]
wasm-bindgen-test = { version = "0.3.10"}
hex = {version = "0.4.2" }

[features]
default = ["std", "u64_backend"]

# Backends
u32_backend = [
	"curve25519-dalek/u32_backend",
]
u64_backend = [
	"curve25519-dalek/u64_backend",
]
avx2_backend = [
	"curve25519-dalek/avx2_backend",
	"bulletproofs/avx2_backend"
]

serde_all = [
	"serde",
	"curve25519-dalek/serde",
]

alloc = [
	"rand_core/alloc",
	"rand/alloc",
	"curve25519-dalek/alloc",
]

no_std = [ "u64_backend" ]
std = [
	# General and optional
	"serde_all",
	# Crypto
	"rand_core/std",
	"rand/std",
	"rand/std_rng",
	"bulletproofs/std",
	# Other
	"codec/std",
	"sp-std/std",
	"criterion",
]

[[bench]]
name = "elgamal_decryption"
harness = false

[[bench]]
name = "membership_verification"
harness = false
