[package]
name = "confidential_identity_v1"
version = "1.1.0"
authors = [ "Polymesh Association" ]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/PolymeshAssociation/cryptography"
description = "Confidential Identity Library"
edition = "2018"
exclude = [".gitignore"]

[dependencies]
# Substrate
sp-std = { version = "5.0.0", default-features = false, git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-monthly-2022-12" }
sp-io = { version = "7.0.0", default-features = false, git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-monthly-2022-12" }

# Common
serde = { version = "1.0.105", default-features = false, features = ["derive"], optional = true }
serde_json = { version = "1.0", default-features = false, features = ["alloc"], optional = true }
serde_bytes = { version = "0.11", default-features = false, features = ["alloc"], optional = true }
zeroize = { version = "1.1", default-features = false }
lazy_static = { version = "1.4.0", default-features = false, features = ["spin_no_std"] }
byteorder = { version = "^1.2.3", default-features = false, features = ["i128"] }
criterion = { version = "0.3", optional = true }

# Crypto
sha3 = { version = "0.9", default-features = false }
blake2 = { version = "0.10.2", default-features = false }

rand_core = { version = "0.6", default-features = false, features = ["alloc"] }
rand = { version = "0.8", default-features = false, features = ["alloc"] }
rand_chacha = { version = "0.3.1", default-features = false }
getrandom = { version = "0.2.6", default-features = false, optional = true }

curve25519-dalek = { package = "curve25519-dalek-ng", version = "4", default-features = false, features = ["alloc"] }
schnorrkel = { version = "0.10", default-features = false }

merlin = { version = "3.0.0", default-features = false }

[dev-dependencies]
wasm-bindgen-test = { version = "0.3.10" }

[features]
default = ["std", "u64_backend"]

# Backends
u32_backend = [
	"curve25519-dalek/u32_backend",
	"schnorrkel/u32_backend",
]
u64_backend = [
	"curve25519-dalek/u64_backend",
	"schnorrkel/u64_backend",
]
avx2_backend = [
	"curve25519-dalek/avx2_backend",
	"schnorrkel/avx2_backend",
]

serde_all = [
	"serde",
	"serde_json",
	"curve25519-dalek/serde",
	"schnorrkel/serde",
]

no_std = [ ]
std = [
	# General and optional
	"serde_all",
	# Crypto
	"schnorrkel/std",
	"rand_core/std",
	"rand/std",
	"rand/std_rng",
	"rand_chacha/std",
	"blake2/std",
	# Other
	"sp-std/std",
	"sp-io/std",
	"criterion",
]

[[bench]]
name = "scalar_from_hash"
harness = false
