[package]
name = "confidential_identity_v2"
version = "2.0.0"
authors = [ "Polymesh Association" ]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/PolymeshAssociation/cryptography"
description = "Confidential Identity Library"
edition = "2018"
exclude = [".gitignore"]

[dependencies]
# Substrate
sp-std = { version = "4.0.0", default-features = false, git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-monthly-2022-05" }
sp-io = { version = "6.0.0", default-features = false, git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-monthly-2022-05" }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }

# Common
serde = { version = "1.0.105", default-features = false, features = ["derive"], optional = true }
serde_json = { version = "1.0", default-features = false, features = ["alloc"], optional = true }
serde_bytes = { version = "0.11", default-features = false, features = ["alloc"]}
zeroize = { version = "1.1", default-features = false }
byteorder = { version = "^1.2.3", default-features = false, features = ["i128"] }
criterion = { version = "0.3", optional = true }

# Crypto
confidential_identity_core = { path = "../confidential-identity-core/", default_features = false }
sha3 = { version = "0.9", default-features = false }
blake2 = { version = "0.10.2", default-features = false }
scale-info = { version = "2.0", default-features = false, features = ["derive"] }

rand_core = { version = "0.6", default-features = false, features = ["alloc"] }
rand = { version = "0.8", default-features = false, features = ["alloc"] }
getrandom = { version = "0.2.6", default-features = false, optional = true }

curve25519-dalek = { package = "curve25519-dalek-ng", version = "4", default-features = false, features = ["nightly", "alloc"] }

[dev-dependencies]
wasm-bindgen-test = { version = "0.3.10" }

[features]
default = ["std", "u64_backend"]

# Backends
u32_backend = [
	"curve25519-dalek/u32_backend",
	"confidential_identity_core/u32_backend",
]
u64_backend = [
	"curve25519-dalek/u64_backend",
	"confidential_identity_core/u64_backend",
]
avx2_backend = [
	"curve25519-dalek/avx2_backend",
	"confidential_identity_core/avx2_backend",
]

serde_all = [
	"serde",
	"serde_json",
	"curve25519-dalek/serde",
	"confidential_identity_core/serde_all",
]

no_std = [
    "confidential_identity_core/no_std",
]

std = [
	# General and optional
	"serde_all",
	# Crypto
	"confidential_identity_core/std",
	"rand_core/std",
	"rand/std",
	"rand/std_rng",
	"blake2/std",
	"blake2/simd",
	# Other
	"sp-std/std",
	"sp-io/std",
	"criterion",
]

[[bench]]
name = "scalar_from_hash"
harness = false
