[package]
name = "cryptography"
version = "0.1.0"
authors = [ "Jesse Lancaster <jesse@polymath.network>",
            "Parnian Alimi   <parnian@polymath.network>",
            "Arash Afshar    <arash@polymath.network>",
          ]
readme = "README.md"
repository = "https://github.com/PolymathNetwork/cryptography"
description = "The Repository for cryptographic libraries used in Polymesh"
edition = "2018"
exclude = [".gitignore"]

[dependencies]
# Substrate
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, rev = "a439a7aa5a9a3df2a42d9b25ea04288d3a0866e8" }
codec = { package = "parity-scale-codec", version = "1.2.0", default-features = false, features = ["derive"] }

# Common
serde = { version = "1.0.105", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde_bytes = { version = "0.11", default-features = false, features = ["alloc"] }
zeroize = { version = "1.1", default-features = false }
criterion = { version = "0.3", optional = true }
lazy_static = "1.4.0"
failure = "0.1.7"

# Crypto
sha3 = { version = "0.8", default-features = false }
# Force the dependency graph to use an older version of clear_on_drop.
clear_on_drop = { version = "= 0.2.3", default-features = false }

rand_core = { version = "0.5", default-features = false}
rand = { version = "0.7", default-features = false }
getrandom = { version = "0.1.14", default-features = false, optional = true} 
chrono = { version = "0.4",  default-features = false }

curve25519-dalek = { version = "2", default-features = false }
schnorrkel = { version = "0.9.1", default-features = false }
merlin = { version = "2.0.0", default-features = false }
bulletproofs = { git = "https://github.com/fmiguelgarcia/bulletproofs.git", branch = "CRYP-92/integration_test", default-features = false }

[dev-dependencies]
wasm-bindgen-test = { version = "0.3.10"}

[features]
default = ["std"] 

# Backends
u64_backend = [ "curve25519-dalek/u64_backend", "schnorrkel/u64_backend" ]
# avx2_backend = [ "curve25519-dalek/avx2_backend", "schnorrkel/avx2_backend" ]
u32_backend = [ "curve25519-dalek/u32_backend", "schnorrkel/u32_backend" ]

serde_all = [
	"chrono/serde", 
	"curve25519-dalek/serde", 
	"schnorrkel/serde",
]

alloc = [
	"rand_core/alloc", 
	"rand/alloc",
	"chrono/alloc",
	"curve25519-dalek/alloc", 
]

no_std = [
	# General
	"u32_backend",
	"serde_all",
	"alloc",
	# Other
	"chrono/clock", 
	"curve25519-dalek/nightly",
	"bulletproofs/no_std"
]

std = [ 
	# General and optional
	"u64_backend",
	"serde_all",
	"criterion",
	# Crypto 
	"curve25519-dalek/nightly", 
	"schnorrkel/std",
	"rand_core/std",
	"rand/std",
	"bulletproofs/std",
	# Other
	"chrono/clock",
	"chrono/std",
	"chrono/serde",
	"codec/std",
	"sp-std/std",
]

[[bench]]
name = "elgamal_decryption"
harness = false

[[bench]]
name = "membership_verification"
harness = false
