[package]
name = "mercat"
version = "1.0.0"
authors = [ "Polymath Inc" ]
readme = "README.md"
repository = "https://github.com/PolymathNetwork/cryptography"
description = "The MERCAT library for confidential transactions."
edition = "2018"
exclude = [".gitignore"]

[dependencies]
# Substrate
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, tag = "v2.0.1" }
codec = { package = "parity-scale-codec", version = "1.3.6", default-features = false, features = ["derive"] }

# Common
serde = { version = "1.0.105", default-features = false, features = ["derive"], optional = true }
serde_json = { version = "1.0", default-features = false, features = ["alloc"], optional = true }
serde_bytes = { version = "0.11", default-features = false, features = ["alloc"], optional = true }
zeroize = { version = "1.1", default-features = false }
failure = { version = "0.1.7", default-features = false, features = ["derive"] }
byteorder = { version = "^1.2.3", default-features = false, features = ["i128"] }
criterion = { version = "0.3", optional = true }

# Crypto
sha3 = { version = "0.8", default-features = false }
cryptography_core = { path = "../cryptography-core", default-features = false }

rand_core = { version = "0.5", default-features = false}
rand = { version = "0.7", default-features = false }
getrandom = { version = "0.1.14", default-features = false, optional = true }

[dev-dependencies]
wasm-bindgen-test = { version = "0.3.10" }

[features]
default = ["std", "u64_backend"]

# Backends
u32_backend = [ "cryptography_core/u32_backend" ]
u64_backend = [ "cryptography_core/u64_backend" ]
avx2_backend = [ "cryptography_core/avx2_backend" ]

serde_all = [
	"serde",
	"serde_json",
	"cryptography_core/serde_all",
]

alloc = [
	"cryptography_core/alloc",
]

no_std = [ "cryptography_core/no_std" ]
std = [
	# General and optional
	"serde_all",
	# Crypto
	"cryptography_core/std",
	"rand_core/std",
	"rand/std",
	# Other
	"codec/std",
	"sp-std/std",
	"failure/std",
	"criterion"
]

[[bench]]
name = "mercat_account"
harness = false

[[bench]]
name = "mercat_asset"
harness = false

[[bench]]
name = "mercat_transaction"
harness = false
