[package]
name = "mercat"
version = "1.1.2"
authors = [ "Polymesh Association" ]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/PolymeshAssociation/cryptography"
description = "The MERCAT library for confidential transactions."
edition = "2018"
exclude = [".gitignore"]

[dependencies]
# Substrate
sp-std = { version = "5.0.0", default-features = false, git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03" }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }

# Common
serde = { version = "1.0.105", default-features = false, features = ["derive"], optional = true }
serde_json = { version = "1.0", default-features = false, features = ["alloc"], optional = true }
serde_bytes = { version = "0.11", default-features = false, features = ["alloc"], optional = true }
zeroize = { version = "1.1", default-features = false }
failure = { version = "0.1.7", default-features = false, features = ["derive"] }
byteorder = { version = "^1.2.3", default-features = false, features = ["i128"] }
criterion = { version = "0.3", optional = true }

# Crypto
sha3 = { version = "0.9", default-features = false }
confidential_identity_core = { version = "1.0.0", path = "../confidential-identity-core/", default_features = false }

rand_core = { version = "0.6", default-features = false, features = ["alloc"] }
rand = { version = "0.8", default-features = false, features = ["alloc"] }
getrandom = { version = "0.2.6", default-features = false, optional = true }

[dev-dependencies]
wasm-bindgen-test = { version = "0.3.10" }

[features]
default = ["std", "u64_backend"]

# 64bit Balances. (default to 32bit)
balance_64 = [ "confidential_identity_core/balance_64" ]

# Backends
u32_backend = [ "confidential_identity_core/u32_backend" ]
u64_backend = [ "confidential_identity_core/u64_backend" ]
avx2_backend = [ "confidential_identity_core/avx2_backend" ]
simd_backend = [ "confidential_identity_core/simd_backend" ]

serde_all = [
	"serde",
	"serde_json",
	"confidential_identity_core/serde_all",
]

alloc = [
	"confidential_identity_core/alloc",
]

no_std = [
  "u64_backend",
  "confidential_identity_core/no_std"
]
std = [
	# General and optional
	"serde_all",
	# Crypto
	"confidential_identity_core/std",
	"rand_core/std",
	"rand/std",
	# Other
	"codec/std",
	"sp-std/std",
	"failure/std",
	"criterion"
]

[[bench]]
name = "mercat_account"
harness = false

[[bench]]
name = "mercat_asset"
harness = false

[[bench]]
name = "mercat_transaction"
harness = false
