[package]
name = "cryptography"
version = "0.1.0"
authors = [ "Jesse Lancaster <jesse@polymath.network>",
            "Parnian Alimi   <parnian@polymath.network>",
          ]
readme = "README.md"
repository = "https://github.com/PolymathNetwork/cryptography"
description = "The Repository for cryptographic libraries used in Polymesh"
edition = "2018"
exclude = [".gitignore"]
build = "build.rs"

[dependencies]
sp-std = { package = "sp-std", git = "https://github.com/paritytech/substrate", default-features = false, rev = "93569d0d1af7aa5eb67b9de8b58d7fffde63b421" }

# Common
serde = { version = "1.0.104", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde_bytes = { version = "0.11", default-features = false, features = ["alloc"]}

# Crypto
sha3 = { version = "0.8", default-features = false }
rand = { version = "0.7.3", default-features = false, optional = true }
curve25519-dalek = { version = "2.0.0", default-features = false,  }
schnorrkel = { version = "0.9.0", default-features = false, optiona = true }

[build-dependencies]
# WASM builder is using `WasmBuilderSource::Crates("1.0.8")`, please see `build.rs`. 
wasm-builder-runner = { package = "substrate-wasm-builder-runner", git = "https://github.com/paritytech/substrate", default-features = false, rev = "93569d0d1af7aa5eb67b9de8b58d7fffde63b421"}

[features]
default = ["no_std"]
no_std = [
	"rand/wasm-bindgen",
	"rand/getrandom",
	"rand/alloc",
	"curve25519-dalek/u32_backend",
	"schnorrkel/u32_backend",
	"schnorrkel/alloc",
	"schnorrkel/wasm-bindgen",
]
std = [
	"sp-std/std",
	"rand/getrandom",
	"curve25519-dalek/simd_backend",
	"schnorrkel/std",
	"schnorrkel/u64_backend",
]

