[package]
name = "cli-common"
version = "0.1.0"
authors = [ "Jesse Lancaster <jesse@polymath.network>",
            "Parnian Alimi   <parnian@polymath.network>",
          ]
edition = "2018"
repository = "https://github.com/PolymathNetwork/cryptography"
description = "Cryptography CLI common library"

[dependencies]
cryptography = { package = "cryptography", path = "../../cryptography/" }

serde = { version = "1.0.104", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde_bytes = { version = "0.11", default-features = false, features = ["alloc"]}

rand = { version = "0.7.3", features = ["wasm-bindgen", "getrandom", "alloc"], default-features = false }
curve25519-dalek = { version = "2.0.0", features = ["u32_backend", "alloc", "serde"], default-features = false }
